# Advanced-Topics-in-Programming

./: .gitignore  CppProperties.json  README.md
EX/: CMakeLists.txt  FlagPiece.cpp  JokerPiece.cpp  JokerPiece.h  PaperPiece.h  Piece.cpp  Piece.h  PieceFactory.cpp  PieceFactory.h  RPS.cpp  RPS.h  RockPiece.cpp  main.cpp  player2.rps_board
EX1/: BombPiece.cpp  RPS.cpp  (+19 more)
EX1_v2/: BombPiece.cpp  BombPiece.h  CMakeLists.txt  EndOfGameHandler.cpp  EndOfGameHandler.h  FlagPiece.cpp  FlagPiece.h  JokerPiece.cpp  JokerPiece.h  Makefile  Moves.cpp  Moves.h  PaperPiece.cpp  PaperPiece.h  Parser.cpp  Parser.h  Piece.cpp  Piece.h  PieceFactory.cpp  PieceFactory.h  RPS.cpp  RPS.h  RockPiece.cpp  RockPiece.h  ScissorsPiece.cpp  ScissorsPiece.h  main.cpp  player1.rps_board  player1.rps_moves  player2.rps_board  player2.rps_moves  rps  rps.output  run_tests.sh  students.txt  test.py
EX1_v2/tests/board parsing tests/file with tabs, spaces and enters - OK/: player2.rps_moves
EX1_v2/tests/board parsing tests/file with too many ROCKs for player1 - ERROR/: player1.rps_board  rps.output
EX1_v2/tests/board parsing tests/file with too short line for both players- ERROR/: player1.rps_board
EX1_v2/tests/board parsing tests/file with too short line for player2 - ERROR/: player1.rps_board
EX1_v2/tests/board parsing tests/file with wrong format for both players - ERROR/: player1.rps_board  player2.rps_board
EX1_v2/tests/board parsing tests/file with wrong format for player1 - ERROR/: player1.rps_board  player2.rps_board
EX1_v2/tests/board parsing tests/player1 all moving pieces eaten before game starts - OK/: player2.rps_board  rps.output
EX1_v2/tests/board parsing tests/player2 doesnt have moving pieces - ERROR/: player2.rps_board  rps.output
EX1_v2/tests/board parsing tests/player2 win by eat player1 flag even that he doesnt have moving pieces - OK/: player1.rps_board
EX1_v2/tests/moving parsing tests/player1 all moving pieces eaten - OK/: player1.rps_moves
EX1_v2/tests/moving parsing tests/player1 wins by eat player2 flag - OK/: rps.output
EX1_v2/tests/test_10/: rps.output
EX1_v2/tests/test_11/: player1.rps_board  rps.output
EX1_v2/tests/test_13/: rps.output
EX1_v2/tests/test_15/: player2.rps_moves  rps.output
EX1_v2/tests/test_17/: player2.rps_moves
EX1_v2/tests/test_18/: player1.rps_board  rps.output
EX1_v2/tests/test_22/: rps.output
EX1_v2/tests/test_23/: rps.output
EX1_v2/tests/test_24/: rps.output
EX1_v2/tests/test_27/: player2.rps_moves  rps.output
EX1_v2/tests/test_28/: rps.output
EX1_v2/tests/test_29/: rps.output
EX1_v2/tests/test_3/: player2.rps_board
EX1_v2/tests/test_33/: player1.rps_moves  player2.rps_moves
EX1_v2/tests/test_34/: player2.rps_board
EX1_v2/tests/test_35/: rps.output
EX1_v2/tests/test_36/: player1.rps_moves
EX1_v2/tests/test_4/: player1.rps_board
EX1_v2/tests/test_5/: player1.rps_board  rps.output
EX1_v2/tests/test_8/: rps.output
EX1_v2/tests/test_9/: rps.output
EX1vs2/: CMakeLists.txt
EX1vs2/ConsoleApplication1/: ConsoleApplication1.sln
EX1vs2/ConsoleApplication1/ConsoleApplication1/: BombPiece.cpp  ConsoleApplication1.cpp  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  FlagPiece.cpp  FlagPiece.h  JokerPiece.cpp  JokerPiece.h  PaperPiece.cpp  PaperPiece.h  Piece.cpp  Piece.h  PieceFactory.cpp  PieceFactory.h  RPS.cpp  RPS.h  RockPiece.cpp  RockPiece.h  ScissorsPiece.cpp  ScissorsPiece.h  main.cpp  player1.rps_board
EX1vs2/ConsoleApplication1/ConsoleApplication1/Debug/: vc141.idb
EX2/: AutoAlgorithm.cpp  AutoAlgorithm.h  BombPiece.cpp  BombPiece.h  CMakeLists.txt  EndOfGameHandler.cpp  EndOfGameHandler.h  FightInfo.h  FileAlgorithm.cpp  FileAlgorithm.h  FlagPiece.cpp  GameManager.cpp  GameManager.h  JokerPiece.cpp  Move.h  Moves.cpp  Moves.h  MyBoard.cpp  MyBoard.h  MyFightInfo.cpp  MyFightInfo.h  MyJokerChange.cpp  MyJokerChange.h  MyMove.cpp  MyMove.h  MyPiecePosition.cpp  MyPiecePosition.h  MyPoint.cpp  MyPoint.h  PaperPiece.cpp  PaperPiece.h  Parser.cpp  Parser.h  Piece.cpp  Piece.h  PieceFactory.cpp  PieceFactory.h  PiecePosition.h  RPS.cpp  RPS.h  (+11 more)
EX2/tests/test_13/: player1.rps_board
EX2/tests/test_17/: player1.rps_moves  rps.output
EX2/tests/test_21/: rps.output
EX2/tests/test_23/: player2.rps_board
EX2/tests/test_27/: player1.rps_moves  player2.rps_board
EX2/tests/test_3/: rps.output
EX2/tests/test_30/: rps.output
EX2/tests/test_34/: player2.rps_moves
EX2/tests/test_36/: rps.output
EX2/tests/test_37/: rps.output
EX2/tests/test_4/: player1.rps_moves  player2.rps_board  rps.output
EX2/tests/test_5/: player2.rps_board
EX2/tests/test_56/: rps.output
EX2/tests/test_7/: rps.output
EX2/tests/test_9/: rps.output
EX3/: AlgorithmRegistration.cpp  AutoAlgorithm.h  BattleInfo.cpp  BattleInfo.h  CMakeLists.txt  EndOfGameHandler.cpp  FileAlgorithm.cpp  FlagPiece.h  GameManager.cpp  GameManager.h  JokerPiece.cpp  JokerPiece.h  MyBoard.cpp  MyFightInfo.cpp  MyJokerChange.cpp  MyJokerChange.h  MyMove.h  MyPiecePosition.cpp  MyPiecePosition.h  MyPoint.h  Parser.cpp  Parser.h  Piece.cpp  PieceFactory.h  PlayerAlgorithm.h  RPS.cpp  RPS.h  RSPPlayer_111.cpp  RSPPlayer_111.h  RSPPlayer_123.cpp  RSPPlayer_123.h  RSPPlayer_204251599.cpp  RSPPlayer_204251599.h  RSPPlayer_222.cpp  RSPPlayer_222.h  RSPPlayer_323239566.cpp  RSPPlayer_323239566.h  RockPiece.cpp  ScissorsPiece.h  TournamentManager.cpp  (+6 more)
EX3/tests/test_10/: rps.output
EX3/tests/test_11/: rps.output
EX3/tests/test_13/: player2.rps_board
EX3/tests/test_18/: rps.output
EX3/tests/test_21/: rps.output
EX3/tests/test_29/: player1.rps_board
EX3/tests/test_33/: rps.output
EX3/tests/test_34/: rps.output
EX3/tests/test_35/: player1.rps_board  player2.rps_board
EX3/tests/test_37/: player2.rps_moves
EX3/tests/test_44/: rps.output
EX3/tests/test_45/: rps.output
EX3/tests/test_5/: rps.output
EX3/tests/test_6/: rps.output
EX3/tests/test_7/: player2.rps_board
EX3/tests/test_8/: player2.rps_board  rps.output
EX4/: CMakeLists.txt  GameBoard.h  ex4.h  ex4_header.h  main.cpp  makefile  unit_test_util.h
(+11 files in other folders)
